--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -2,6 +2,7 @@ name: 'Upload'
 on: workflow_dispatch
 jobs:
   upload:
+    runs-on: ubuntu-latest
     steps:
       - uses: keithweaver/aws-s3-github-action@v1.0.0
         with:
