--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -4,6 +4,7 @@ jobs:
   upload:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: keithweaver/aws-s3-github-action@v1.0.0
         with:
           command: cp
