--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -12,3 +12,4 @@ jobs:
           destination: s3://cf.gov-build/frontend/b #/${{ env.GITHUB_SHA }}
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: us-east-1
