--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -11,5 +11,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: test_{{ github.sha }}
+          name: test_${{ github.sha }}
           path: world.txt
