--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -5,10 +5,11 @@ jobs:
   upload:
     runs-on: ubuntu-latest
     steps:
-      - name: Upload artifact
-        uses: actions/download-artifact@v3
+      - name: Download artifact
+        uses: dawidd6/action-download-artifact@v2.27.0
         with:
-          name: test_${{ github.sha }}
+          workflow: upload.yml
+          commit: ${{ github.sha }}
 
       - name: Display structure of downloaded files
         run: ls -R
