--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -5,6 +5,9 @@ jobs:
   Download:
     runs-on: ubuntu-latest
     steps:
+      - name: test unzip
+      - run: unzip fake
+
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2.27.0
         with:
