--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: test unzip
-      - run: unzip fake
+        run: unzip fake
 
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2.27.0
