--- a/package.json
+++ b/package.json
@@ -23,17 +23,36 @@
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "lint": "./scripts/lint.sh"
   },
   "dependencies": {
     "@stencil/core": "^4.0.0"
   },
   "devDependencies": {
+    "@stencil-community/eslint-plugin": "^0.5.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsdoc": "^46.4.6",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "jest": "^29.6.2",
     "jest-cli": "^29.6.2",
-    "puppeteer": "^21.0.3"
+    "postcss-less": "^6.0.0",
+    "prettier": "^3.0.2",
+    "puppeteer": "^21.0.3",
+    "stylelint": "^15.10.2",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-less": "^1.0.8",
+    "typescript": "^5.1.6"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "prettier": {
+    "singleQuote": true
+  },
+  "type": "module"
 }
